# driver-manager

./: README.md  drivers.db  pyproject.toml
src/driver_manager/: __init__.py  database_manager.py  main.py  models.py
src/tests/: tests_api.py
