[project]
name = "driver-manager"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Marcos", email = "marcal16@ucm.es" }
]
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.115.12",
    "httpx>=0.28.1",
    "pytest>=8.3.5",
    "ruff>=0.11.10",
    "sqlalchemy>=2.0.41",
]

[project.scripts]
driver-manager = "driver_manager:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
